@@ -1,3 +1,7 @@
+2011-02-22  Mike Frysinger  <vapier@gentoo.org>
+
+  * src/cmd/cmd_print.c: Add a completion handler.
+
 2011-02-21  Mike Frysinger  <vapier@gentoo.org>
 
   * data/Makefile.am (nobase_dist_pkgdata_DATA): Add missing analog/bfin/bfin.
